Rename kustomize base configuration to base-openshift

--- a/k8s/installs/dev/kustomization.yaml
+++ b/k8s/installs/dev/kustomization.yaml
@@ -7,7 +7,7 @@ namespace: dev
 #nameSuffix: -v1
 
 resources:
-  - ../../base
+  - ../../base-openshift
 
 # Patch Deployment
 patchesStrategicMerge:
