--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,11 +1,18 @@
-apiVersion: skaffold/v2beta7
+apiVersion: skaffold/v2beta8
 kind: Config
 metadata:
-  name: kboot-reactive-mongo
+  name: redis-demo
 build:
-  local:
   artifacts:
-    - image: registry.apps.c3smonkey.ch/dev/redis-demo
+    - image: redis-demo
+      sync:
+        manual:
+          - src: src/main/resources/**/*
+            dest: /workspace/BOOT-INF/classes
+            strip: src/main/resources/
+          - src: build/classes/**/*
+            dest: /workspace/BOOT-INF/classes
+            strip: build/classes/
       buildpacks:
         builder: gcr.io/paketo-buildpacks/builder:base-platform-api-0.3
         dependencies:
@@ -13,18 +20,34 @@ build:
             - build.gradle.kts
             - src/main/resources
             - build/classes
-      sync:
-        manual:
-          - src: "src/main/resources/**/*"
-            dest: /workspace/BOOT-INF/classes
-            strip: src/main/resources/
-          - src: "build/classes/**/*"
-            dest: /workspace/BOOT-INF/classes
-            strip: build/classes/
-  tagPolicy:
-    sha256: {}
-
 deploy:
   kustomize:
     paths:
-      - k8s/installs/dev
+      - k8s/minikube
+      -
+profiles:
+  - name: openshift
+    build:
+      artifacts:
+        - image: registry.apps.c3smonkey.ch/dev/redis-demo
+          buildpacks:
+            builder: gcr.io/paketo-buildpacks/builder:base-platform-api-0.3
+            dependencies:
+              paths:
+                - build.gradle.kts
+                - src/main/resources
+                - build/classes
+          sync:
+            manual:
+              - src: "src/main/resources/**/*"
+                dest: /workspace/BOOT-INF/classes
+                strip: src/main/resources/
+              - src: "build/classes/**/*"
+                dest: /workspace/BOOT-INF/classes
+                strip: build/classes/
+      tagPolicy:
+        sha256: { }
+    deploy:
+      kustomize:
+        paths:
+          - openshift/installs/dev
