--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     kubernetes:
+      config:
+        paths: /config/application.yaml
       reload:
         enabled: true
         mode: polling
@@ -12,7 +14,6 @@ spring:
         mode: service
   devtools:
     add-properties: false
-
 ---
 spring:
   profiles: standalone
