--- a/k8s/minikube/use_configmap.yaml
+++ b/k8s/minikube/use_configmap.yaml
@@ -9,11 +9,11 @@ spec:
         - name: redis-demo
           volumeMounts:
             - mountPath: /config
-              name: redis-demo-config
+              name: redis-demo
       volumes:
-        - name: redis-demo-config
+        - name: redis-demo
           configMap:
-            name: redis-demo-config
+            name: redis-demo
 
 
 
