--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -6,7 +6,7 @@ spring:
       reload:
         enabled: true
         mode: polling
-        period: 5000
+#        period: 5000
       discovery:
         enabled: true
       ribbon:
